--- a/index.html
+++ b/index.html
@@ -14,28 +14,41 @@
 <body>
 
     <button class="btn btn-danger btn-lg">Click Me</button>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6"> -->
-                <div class="flowchart"><img src="images/FlowChart.jpg" alt="shopImage"></div>
-            <!-- </div>
-            <div class="col-md-3"></div>
-        </div>
-    </div> -->
+    <div class="flowchart"><img src="images/FlowChart.jpg" alt="shopImage"></div>
+    <div class="customer"><img src="images/customer.gif" alt="customerGif"></div>
+    <div class="manager"><img src="images/manager.gif" alt="managerGif"></div>
 
     <script>
         $(document).ready(function (){ 
+            var cards = ['.flowchart', '.customer' , '.manager'];
+            var clickCounts = 0;
+
+            for (var i = 0; i < cards.length; i++) {
+                $(cards[i]).hide();
+            }
             
-            $('.flowchart').hide();
-            var chart = false;
-            $('.btn').on('click', function(){
-                if (chart){
-                    $('.flowchart').hide();
-                    chart = false;
-                } else {
-                    $('.flowchart').show();
-                    chart = true;
+            $(document).on('click' ,'.btn', function(){
+                clickCounts++;
+                switch(clickCounts%4){
+                    case 1: 
+                        $(cards[0]).show();
+                        $(cards[1]).hide();
+                        $(cards[2]).hide();
+                        break;
+                    case 2: 
+                        $(cards[0]).hide();
+                        $(cards[1]).show();
+                        $(cards[2]).hide();
+                        break;
+                    case 3: 
+                        $(cards[0]).hide();
+                        $(cards[1]).hide();
+                        $(cards[2]).show();
+                        break;
+                    default:  
+                        $(cards[0]).hide();
+                        $(cards[1]).hide();
+                        $(cards[2]).hide();                    
                 }
             });
         });
